--- a/exercicios/basico.html
+++ b/exercicios/basico.html
@@ -7,9 +7,14 @@
     <script src="/js/vue.min.js"></script>
 </head>
 <body class="exercicio">
-
+    <div id="app">
+        <p>1) {{ 2 + 2 }}</p>
+    </div>
     <script>
-        // ...
+       new Vue({
+        el:"app"
+        
+       })
     </script>
 </body>
 </html>
