--- a/exercicios/basico.html
+++ b/exercicios/basico.html
@@ -9,11 +9,31 @@
 <body class="exercicio">
     <div id="app">
         <p>1) {{ 2 + 2 }}</p>
+        <p>2) {{"teste".toUpperCase()}}</p>
+        <p>3) produto: {{ nome }}, R$ {{ preco }}, {{ desconto * 100 }}%</p>
+        <p>4) Hora Certa: {{ horCerta() }}</p>
+        <p>5) Preço Com Desconto: R${{ precoComDesconto}} </p>
     </div>
     <script>
        new Vue({
-        el:"app"
-        
+        el:"#app",
+        data: {
+            nome:'Caneta',
+            preco: 1.50,
+            desconto: 0.15
+        }, 
+        methods:{
+            horCerta(){
+                return new Date().toLocaleString()
+            }
+        },
+        computed:{
+            precoComDesconto(){
+                return this.preco * (1 - this.desconto)
+            }
+
+        }
+
        })
     </script>
 </body>
