--- a/exercicios/binding.html
+++ b/exercicios/binding.html
@@ -7,9 +7,31 @@
     <script src="/js/vue.min.js"></script>
 </head>
 <body class="exercicio">
+    <div id="app">
+        <p>"{{ link }}"</p>
+        <p><a href="{{ link }}">Canal?</a></p>
+        <p><a v-bind:href="link">Canal.</a></p>
+        <p><a :href="link">canal</a></p>
+        <p>
+            <input type="text" v-model="nome"><br>
+            <span>{{nome}}</span>
+        </p>
+    </div>
 
     <script>
-        // ...
+        new Vue({
+            el:"#app",
+            data:{
+                nome: "Maria",
+                link:"http://youtube.com/cod3rcursos"
+            },
+            watch:{
+                nome(novoValor){
+                    console.log(novoValor.toUpperCase())
+                }
+
+            }
+        })
     </script>
 </body>
 </html>
