--- a/exercicios/eventos.html
+++ b/exercicios/eventos.html
@@ -7,9 +7,37 @@
     <script src="/js/vue.min.js"></script>
 </head>
 <body class="exercicio">
-
+    <div id="app">
+        <p>{{ contador }}</p>
+        <p>
+            <button v-on:click="add">+1</button>
+            <button @click="contador -= 1">-1</button>
+        </p>
+        <p  @mousemove="atualizarPosicao">
+            Coordenadas: {{x}} e {{y}}
+            <span @mousemove.stop>Aqui não</span>
+        </p>
+    </div>
     <script>
-        // ...
+        new Vue({
+            el: "#app",
+            data:{
+                x: 0,
+                y: 0,
+                contador: 0 
+            },
+            methods:{
+                add(){
+                    this.contador++ 
+                },
+               
+
+                atualizarPosicao(e) {
+                    this.x  = e.clientX
+                    this.y  = e.clientY
+                }
+            }
+        })
     </script>
 </body>
 </html>
