diretivas v-if, v-for e v-show

--- a/exercicios/ifFor.html
+++ b/exercicios/ifFor.html
@@ -7,9 +7,33 @@
     <script src="/js/vue.min.js"></script>
 </head>
 <body class="exercicio">
-
+<div id="app">
+    <p v-for="(aluno, i) in alunos">
+        {{i+1}}) {{aluno.aluno}} - {{aluno.nota}}
+        <span v-if="aluno.nota >= 9">Quadro de honra</span>
+        <span v-else-if="aluno.nota >= 7">Aprovado</span>
+        <span v-else-if="aluno.nota <= 6.9">Reporvado</span>
+    </p>
+    <ul style="list-style: none;">
+        <li v-for="n in 8">
+            <span v-show="n >= 4">{{n}}</span>
+        </li>
+    </ul>
+</div>
     <script>
-        // ...
+       new Vue({
+        el:"#app",
+        data:{
+            alunos:[
+                {aluno:"Ana", nota:7.8},
+                {aluno:"Iury", nota:9.9},
+                {aluno:"Mônica", nota:9.9},
+                {aluno:"Nathália", nota:8.0},
+                {aluno:"Joao", nota:3.0}
+        ]
+            
+        }
+       })
     </script>
 </body>
 </html>
