--- a/exercicios/template.html
+++ b/exercicios/template.html
@@ -7,9 +7,22 @@
     <script src="/js/vue.min.js"></script>
 </head>
 <body class="exercicio">
-    
+    <div id="app">
+        
+    </div>
     <script>
-        // ...
+        new Vue({
+            el:"#app",
+            data:{
+                titulo: "VueJs",
+                subtitulo: "Framework Progressivo"
+            },
+            template: `
+            <div>
+                <h1> {{titulo}}</h1>
+                <h3> {{subtitulo}} </h3>
+            </div>`
+        })
     </script>
 </body>
 </html>
