--- a/exercicios/diretiva.html
+++ b/exercicios/diretiva.html
@@ -7,9 +7,25 @@
     <script src="/js/vue.min.js"></script>
 </head>
 <body class="exercicio">
-
+<div id="app">
+    <input type="text" v-model="nome">
+    <div v-inverter="nome"></div>
+</div>
     <script>
-        // ...
+        Vue.directive('inverter',{
+            componentUpdated(el, binding){
+                const invertido = binding.value.split('')
+                    .reverse().join('')
+                    el.innerHTML = invertido
+            }
+        })
+
+        new Vue({
+            el:"#app",
+            data:{
+                nome: ''
+            }
+        })
     </script>
 </body>
 </html>
