Gerador de QR Code

--- a/qrcode/index.html
+++ b/qrcode/index.html
@@ -10,9 +10,34 @@
 </head>
 
 <body>
+    <div id="app">
+        <h1>{{title}}</h1>
+        <div>
+            <input type="text" size="25"
+             placeholder="Digite para gerar..." 
+             v-model="text">
+        </div>
+        <div v-if="text" class="output">
+            <img :src="newQRCode" alt="QRCode">
+        </div>
+    </div>
 
     <script>
-        // ...
+        new Vue({
+            el: "#app",
+            data: {
+                title: 'Gerador QRCode',
+                text: 'https://cod3r.com.br',
+                qrcode: new QRious({ size: 300 })
+            },
+            computed: {
+                newQRCode() {
+                    this.qrcode.value = this.text
+                    return this.qrcode.toDataURL()
+                }
+            },
+           
+        })
     </script>
 </body>
 
