sumario de vendas parte final

--- a/sales/index.html
+++ b/sales/index.html
@@ -57,6 +57,28 @@
                     fetch('/data/sales.json')
                     .then(resp => resp.json())
                     .then(data => this.sales = data)
+                },
+                calcularTotal(sales){
+                    if(!sales) return 0
+                    return sales.reduce((total, sale) => total + sale.value, 0)
+                }
+            },
+            computed:{
+                salesByProduct(){
+                    if(!this.sales) return null
+
+                    const salesByProduct = this.sales.reduce((grouped, sales) =>{
+                    if(!grouped.hasOwnProperty(sales.name)){
+                        grouped(sales.name) = {
+                            name: sale.name,
+                            value: sale.price * sale.qtde
+                        }
+                        return grouped
+                    }
+                    grouped(sale.name).value += sale.price * sale.qtde
+                    return grouped
+                    },{})
+                    return Object.values(salesByProduct)
                 }
             },
             mounted(){
